src/App.css
.App {
  text-align: center;
}


.section {
  padding-top: 10vh;
  padding-bottom: 10vh;
}
.section > .section-header {
  position: relative;
  display: inline-block;
  margin-bottom: 40px;
}
.section > .section-header::after {
  content: '';
  position: absolute;
  bottom: -10px;
  left: 20%;
  width: 60%;
  height: 2px;
  border-radius: 100%;
  background: var(--primary);
  opacity: 60%;
}

.Homepage-bg {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  color: #eee;
  min-height: 100vh;
}
/* For the top background */
.Homepage-bg::after, .Homepage-bg::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: -1;
}
.Homepage-bg::before {
  background-image: url(./images/background.jpeg);
  background-repeat: no-repeat;
  background-size: cover;
}
.Homepage-bg::after {
  background: rgba(0,0,0,0.5);
}

.top-hero {
  margin: 60px 0;
  max-width: max(800px, 60%);
}
#hero-text {
  font-size: 3.2em;
  margin-bottom: 25px;
  color: #fff;
}
p#hero-subtitle {
  font-size: 1.3em;
}
.Homepage-bg .btn {
  white-space: nowrap;
  margin: 10px 0;
}

/* How you can help section */
.Homepage-help {
  background-color: #eee;
  justify-content: start;
}

.help-card {
  background-color: white;
  border-radius: 10px;
  box-shadow: 0 0 5px rgba(0,0,0,0.1);
  padding: 15px;
  margin: 15px auto;
  max-width: 450px;
}

.help-card  p {
  text-align: left;
}
.help-card:hover {
  box-shadow: 0 0 10px rgba(0,0,0,0.15);
}

.help-card h3 {
  /* font-size: calc(10px + 2vmin); */
  margin-bottom: 20px;
}

.Homepage-about-paragraph {
  max-width: 900px;
  margin: auto;
}
.team-card {
  max-width: 300px;
  padding: 15px;
  margin: 15px auto;
}

.team-card:hover {
  background: #f5f5f5;
}

.footer {
  padding: 10px 0;
  background-color: var(--primary);
  color: #f5f5f5;
}

.footer a {
  color: white;
}

.btn-cursor{
  cursor: pointer;
}

.resources-title{
  /* text-align: center; */
  margin-left: auto
}

.resource-buttons {
  width: 100%;
  margin: 8px 40px 8px 40px;
}

@media only screen and (min-width: 768px) {
  .button-container{
    position: absolute;
    bottom: 40px;
    width: 85%;
  }
  
  .help-card {
    height: 495px;
  }

  .button-info{
    margin-left:50px;
    margin-right: 50px;
  }
}

